--- a/UI-Resources.qrc
+++ b/UI-Resources.qrc
@@ -18,6 +18,12 @@
         <file>lautstarke_light.png</file>
         <file>light_icon_dark.png</file>
         <file>light_icon_light.png</file>
+        <file>Beep-icon-dark.png</file>
+        <file>Beep-icon-light.png</file>
+        <file>Beep-icon-red.png</file>
+        <file>Ton-icon-dark.png</file>
+        <file>ton-icon-light.png</file>
+        <file>Ton-icon-red.png</file>
     </qresource>
     <qresource prefix="/stylesheet">
         <file>lightmode.css</file>
