--- a/darkmode.css
+++ b/darkmode.css
@@ -28,7 +28,10 @@ QLabel{
 
 QSpinBox{
     color: white;
-    Background: transparent;
+    Background-color: transparent;
+    selection-background-color: transparent;
+    selection-color: white;
+    color: white;
 }
 
 QGroupBox{
