--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -90,7 +90,7 @@ QTabBar::tab::disabled{
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <property name="iconSize">
        <size>
@@ -2075,18 +2075,7 @@ QPushButton::checked{
            </font>
           </property>
           <property name="styleSheet">
-           <string notr="true">QProgressBar {
-	color: black;
-    border: 2px solid black;
-    border-radius: 12px;
-	text-align: center;
-}
-
-
-QProgressBar::chunk {
-background: #05B8CC;
-border-radius: 10px;
-}</string>
+           <string notr="true"/>
           </property>
           <property name="value">
            <number>50</number>
