--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -48,6 +48,9 @@ QTabBar::tab{
     margin-bottom: 5px;
     margin-top: 10px;
 
+padding-right: -10px;
+	padding-left: 4px;
+
     /*padding-left: 5px;
     padding-right: 5px;*/
 
@@ -69,12 +72,16 @@ QTabBar::tab:selected {
     color: #e50616;
     background: transparent;
     border-bottom: 2px solid #e50616;
+	padding-right: -10px;
+	padding-left: 4px;
 
 }
 
 QTabBar::tab:!selected {
     color: black;
     background: transparent;
+padding-right: -10px;
+	padding-left: 4px;
     
 }
 
@@ -93,7 +100,7 @@ QTabBar::tab::disabled{
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>4</number>
       </property>
       <property name="iconSize">
        <size>
@@ -1780,8 +1787,8 @@ QRadioButton::indicator:unchecked{
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>406</width>
-                 <height>552</height>
+                 <width>424</width>
+                 <height>586</height>
                 </rect>
                </property>
                <layout class="QGridLayout" name="gridLayout_2">
