--- a/UI-Resources.qrc
+++ b/UI-Resources.qrc
@@ -24,6 +24,7 @@
         <file>Ton-icon-dark.png</file>
         <file>ton-icon-light.png</file>
         <file>Ton-icon-red.png</file>
+        <file>Logo_v2.png</file>
     </qresource>
     <qresource prefix="/stylesheet">
         <file>lightmode.css</file>
