--- a/klingelballui.ui
+++ b/klingelballui.ui
@@ -18,10 +18,22 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0">
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="enabled">
        <bool>true</bool>
+      </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
       </property>
       <property name="font">
        <font>
@@ -100,7 +112,7 @@ QTabBar::tab::disabled{
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>0</number>
       </property>
       <property name="iconSize">
        <size>
@@ -138,7 +150,10 @@ QTabBar::tab::disabled{
          <enum>QLayout::SetNoConstraint</enum>
         </property>
         <property name="leftMargin">
-         <number>6</number>
+         <number>10</number>
+        </property>
+        <property name="rightMargin">
+         <number>10</number>
         </property>
         <item>
          <layout class="QVBoxLayout" name="Volume_Layout" stretch="4,4,4,4">
@@ -1167,6 +1182,12 @@ QTabWidget::pane{
         <string/>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_9">
+        <property name="leftMargin">
+         <number>10</number>
+        </property>
+        <property name="rightMargin">
+         <number>10</number>
+        </property>
         <item>
          <layout class="QVBoxLayout" name="Helligkeit_Layout" stretch="4,4,4,4">
           <property name="spacing">
@@ -1204,7 +1225,7 @@ QTabWidget::pane{
           <item>
            <widget class="QPushButton" name="Heilligkeit_erhoehen">
             <property name="sizePolicy">
-             <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
+             <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
@@ -1294,7 +1315,7 @@ QTabWidget::pane{
           <item>
            <widget class="QPushButton" name="Heilligkeit_verringern">
             <property name="sizePolicy">
-             <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
+             <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
@@ -1848,6 +1869,12 @@ QRadioButton::indicator:unchecked{
         <string>Profile</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_4">
+        <property name="leftMargin">
+         <number>10</number>
+        </property>
+        <property name="rightMargin">
+         <number>10</number>
+        </property>
         <item>
          <widget class="QStackedWidget" name="stackedWidget">
           <property name="currentIndex">
@@ -1871,8 +1898,8 @@ QRadioButton::indicator:unchecked{
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>424</width>
-                 <height>586</height>
+                 <width>416</width>
+                 <height>552</height>
                 </rect>
                </property>
                <layout class="QGridLayout" name="gridLayout_2">
@@ -2076,6 +2103,12 @@ QRadioButton::indicator:unchecked{
         <string/>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_6">
+        <property name="leftMargin">
+         <number>10</number>
+        </property>
+        <property name="rightMargin">
+         <number>10</number>
+        </property>
         <item>
          <widget class="QListWidget" name="UIDeviceList">
           <property name="sizePolicy">
@@ -2242,6 +2275,12 @@ QPushButton::checked{
         </item>
         <item>
          <widget class="QPushButton" name="Uebtragen3">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -2274,6 +2313,12 @@ QPushButton::checked{
         <string/>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_10">
+        <property name="leftMargin">
+         <number>10</number>
+        </property>
+        <property name="rightMargin">
+         <number>10</number>
+        </property>
         <item>
          <widget class="QLabel" name="Aussehen_label">
           <property name="font">
